<resources>
    <string name="app_name">Aliro Seguro</string>
    <string name="host_prod">meuespaco.aliroseguro.com.br</string>
    <string name="host_act">act-meuespaco.aliroseguro.com.br</string>
    <string name="gcm_sender_id">245912925036</string>
    <string name="sales_force_id_hom">b76da360-3d45-405c-85a8-f5790937cc29</string>
    <string name="sales_force_id_prod">b8898d2b-dcb4-45a5-a2bd-0f50e499be45</string>
    <string name="sales_force_token_hom">r7s3xepzd86xhs6nm5dd8jpd</string>
    <string name="sales_force_token_prod">gwnesn4b9ynybujvuhvkg6q5</string>
    <string name="pusher_id_prod">b8898d2b-dcb4-45a5-a2bd-0f50e499be45</string>
    <string name="pusher_id_hom">b76da360-3d45-405c-85a8-f5790937cc29</string>
    <string name="error_image_gallery">Não foi possível carregar a imagem selecionada</string>
    <string name="fabric_id">4184877f238774093b7b09ec5b7572c6d22c7846</string>
    <string name="legend_ac"> - AC</string>
    <string name="facebook_app_id">635475199910529</string>
    <string name="facebook_button">Entrar com Facebook</string>
    <string name="facebook_button_profile">ACESSAR TAMBÉM PELO FACEBOOK</string>
    <string name="google_button">Entrar com Google</string>
    <string name="google_button_profile">ACESSAR TAMBÉM PELO GOOGLE</string>
    <string name="google_sign_error">Não foi possível efetuar o login pelo Google</string>
    <string name="version_name">Versão: %s</string>
    <string name="button_detail_notification">Detalhe</string>
    <string-array name="nav_drawer_items">
        <item>Faça seu login</item>
        <item>Cadastrar</item>
        <item>Acidente e Assistência</item>
        <item>Oficina referenciadas</item>
        <item>Meu Seguro</item>
        <item>Clube de vantagens</item>
        <item>Fale conosco</item>

    </string-array>
    <string name="validation_token_error">Não foi possivel validar seu cadastro</string>
    <string name="missing">Faltam</string>
    <string name="missing_2">Falta</string>
    <string name="item_parcels">Parcela</string>
    <string name="item_due_date">Vencimento</string>
    <string name="item_value">Valor</string>
    <string name="item_status">Status</string>
    <string name="status_home_on">Status do sinistro</string>
    <string name="title_payments_home">Informações de\n<b>pagamento</b></string>
    <string name="expand">expandir</string>
    <string name="collapse">recolher</string>
    <string name="ver_detalhes"><u>ver detalhes</u></string>
    <string name="title_extends_ok">SUA PARCELA FOI \n PRORROGADA</string>
    <string name="description_extends_ok">Veja abaixo os dados para pagamento da parcela:</string>
    <string name="description_extends_obs">Atenção: Para realizar o pagamento do boleto, aguardar o prazo de 3 horas para que o mesmo seja registrado junto ao banco</string>
    <string name="cod_number">Código de Barras:</string>
    <string name="title_extends">Prorrogar data de pagamento</string>
    <string name="description_extends_1">Ao prorrogar a data do pagamento de sua parcela você concorda com a correção do valor.</string>
    <string name="description_extends_2">Para essa parcela a forma de pagamento será boleto</string>
    <string name="new_data_extends">NOVA DATA</string>
    <string name="value_extends">VALOR</string>
    <string name="terms_extends">termos de acordo</string>
    <string name="status_1">Quitado</string>
    <string name="status_2">Atrasado</string>
    <string name="status_3">A Vencer</string>
    <string name="status_3_novo">Processando</string>
    <string name="status_4">Em Análise</string>
    <string name="loading_register">Aguarde enquanto seu cadastro está sendo ativado!</string>
    <string name="message_register_activated">A ativação do seu cadastro foi realizado com sucesso!</string>
    <string name="hi">Olá</string>
    <string name="in">de</string>
    <string name="money">R$</string>
    <string name="next_payment_dialog">Vencimento:</string>
    <string name="next_payment_value_dialog">Valor:</string>
    <string name="clipboard">Código barras foi copiado com sucesso</string>
    <string name="next_payment">Vencimento da próxima fatura</string>
    <string name="next_payment_1">, no valor de</string>
    <string name="title_action_bar_0">Aliro Seguro</string>
    <string name="title_action_bar_1">Oficinas</string>
    <string name="title_action_bar_2">Acidente ou Assistência</string>
    <string name="title_action_bar_3">Cadastre-se</string>
    <string name="title_action_bar_4">Trocar E-mail</string>
    <string name="title_action_bar_5">Meus Dados</string>
    <string name="title_action_bar_6">Trocar Senha</string>
    <string name="title_action_bar_7">Atendimento</string>
    <string name="title_action_bar_8">Meu Seguro</string>
    <string name="title_action_bar_9">Sinistro</string>
    <string name="title_action_bar_10">Notificação</string>
    <string name="title_action_bar_11">Clube de Vantagens</string>
    <string name="title_action_bar_12">Política de Privacidade</string>
    <string name="title_action_bar_13">Documentos e fotos</string>
    <string name="title_action_bar_14">Assistência</string>
    <string name="title_action_bar_15">Tratamento de Dados</string>
    <string name="register_ok">Registro realizado com sucesso!</string>
    <string name="register_title1">Cadastre-se. </string>
    <string name="register_title2"> É super rápido!</string>
    <string name="register_warning">Para isso, preencha com seus dados abaixo e clique em Registrar</string>
    <string name="register_atention"><b>Atenção!</b> Sua senha deve conter letras e números e no mínimo 8 caracteres.</string>
    <string name="register_subtitle"> </string>
    <string name="register_name">Nome</string>
    <string name="register_apolice">Apólice</string>
    <string name="register_apolice_plate">Digite sua apólice ou placa do carro</string>
    <string name="register_apolice_cep">Digite sua apólice ou CEP</string>
    <string name="register_apolice_date">Digite sua apólice ou data de nascimento</string>
    <string name="register_cpf">CPF</string>
    <string name="register_email">Email</string>
    <string name="register_email_again">Confirme </string>
    <string name="register_name_error">Preencha seu nome</string>
    <string name="register_apolice_error">Preencha seu número de apólice</string>
    <string name="register_cpf_cnpj_error">Preencha seu CPF ou CNPJ</string>
    <string name="register_email_error">Preencha seu E-mail</string>
    <string name="register_cpf_error">Preencha seu CPF</string>
    <string name="register_error_password_confirm">Senha e senha de confirmação devem ser iguais</string>
    <string name="register_error_email_confirm">E-mail e E-mail de confirmação devem ser iguais</string>
    <string name="register_info_password"><b>Atenção!</b> Sua senha deve conter no mínimo 8 (oito) caracteres entre letras e números. Não é permitido utilizar seu nome, sobrenome ou "&amp;".</string>
    <string name="register_cb_terms">Concordo com os </string>
    <string name="register_cb_terms_2">termos, condições e privacidade, e conheço os tratamentos dos meus dados pessoais.</string>
    <string name="SegundaViaPix">2ª Via QRCode PIX</string>
    <string name="CopiarPix">Copiar QRCOde PIX</string>
    <string name="extends_warning">Declaro que não tive sinistro enquanto essa parcela esteve vencida</string>
    <string name="vehicle_accident_title_log_off">Digite os dados solicitados abaixo para continuar seu sinistro</string>
    <string name="vehicle_accident_24_title_log_off">Digite os dados solicitados abaixo para continuar com sua assistência</string>
    <string name="vehicle_accident_title_step_1">Por favor, escolha uma situação que se enquadra seu sinistro</string>
    <string name="vehicle_accident_error_validation_step_1">Por favor, escolha uma situação que se enquadre seu sinistro.</string>
    <string name="vehicle_accident_title_1_step_2">Confirme seus dados</string>
    <string name="vehicle_accident_title_2_step_2">Segurado era o condutor?</string>
    <string name="vehicle_accident_title_1_step_3">Confirme dia, horário e local do ocorrido</string>
    <string name="vehicle_accident_title_1_step_4">Conte o que aconteceu</string>
    <string name="vehicle_accident_title_list">Para qual das apólices abaixo você quer sinalizar um sinistro?</string>
    <string name="icon_audio">Se preferir, envie seu relato em áudio</string>
    <string name="icon_photo">Deseja adicionar fotos ou documentos do ocorrido?</string>
    <string name="click_add_photo">Clique ao lado para adicionar</string>
    <string name="click_add_photo_delete">Clique ao lado para adicionar ou clique e segure na imagem para apagar</string>
    <string name="documents_warning">Salve aqui fotos ou documentos importantes como: carteira de habilitação, RG, documento do carro entre outros</string>
    <string name="timerpicker_title">Selecione o horário</string>
    <string name="datepicker_title">Selecione a data</string>
    <string name="vehicle_accident_option_1_step_1">Roubo e furto</string>
    <string name="vehicle_accident_option_2_step_1">Alagamento</string>
    <string name="vehicle_accident_option_3_step_1">Acidentes envolvendo terceiros</string>
    <string name="vehicle_accident_option_4_step_1">Acidente</string>
    <string name="vehicle_accident_option_1_step_2">Sim</string>
    <string name="vehicle_accident_option_2_step_2">Não</string>
    <string name="Or">Ou</string>
    <string name="or">ou</string>
    <string name="password">Senha</string>
    <string name="email_cpf">E-mail ou CPF/CNPJ</string>
    <string name="privacy">Política de Privacidade</string>
    <string name="keep_logged_in">Manter logado</string>
    <string name="click">Clique aqui</string>
    <string name="sinistro_open">Ou deseja acompanhar um atendimento?</string>
    <string name="title_attention">ATENÇÃO!</string>
    <string name="location_error">Não foi possível encontrar \n sua localização</string>
    <string name="location_alert">Digite um dos Dados Abaixo</string>
    <string name="location_enable_alert">Para usar todas as funcionalidades do aplicativo é necessário ativar a localização do dispositivo, deseja ativar?</string>
    <string name="change_email_question">Para trocar seu email, responda as seguintes perguntas:</string>
    <string name="change_email_cpf">Qual o CPF/CNPJ do segurado?</string>
    <string name="error_change_email_answer">Preencha o campo de reposta</string>
    <string name="change_email_ok">VOCÊ RECEBERÁ UMA NOTIFICAÇÃO DA MUDANÇA NO SEU NOVO EMAIL. CLIQUE NO LINK ENVIADO PARA REALIZAR A TROCA.</string>
    <string name="change_email_logged">SEU E-MAIL FOI ALTERADO COM SUCESSO.</string>
    <string name="change_password_ok">SUA SENHA FOI ALTERADA COM SUCESSO</string>
    <string name="change_password">Troca de senha</string>
    <string name="change_email">Troca de e-mail</string>
    <string name="change_email_title">Para trocar seu email, responda as seguintes perguntas:</string>
    <string name="change_email_item_1_part2">Preencha o novo e-mail</string>
    <string name="change_email_item_1">1.Qual o CEP de sua residência?</string>
    <string name="change_phone_ok">SEU TELEFONE FOI ALTERADO COM SUCESSO.</string>
    <string name="view_card">Visualizar Cartão Segurado</string>
    <string name="about">Fale conosco</string>
    <string name="about_app">Fale sobre este aplicativo</string>
    <string name="forgot_password">Esqueceu sua senha?</string>
    <string name="forgot_email">Esqueceu seu e-mail?</string>
    <string name="not_user_part1">Ainda não é usuário?</string>
    <string name="workshop_proximity">Oficinas referenciadas mais próximas</string>
    <string name="button_login">Login</string>
    <string name="button_register">Faça seu cadastro</string>
    <string name="button_whatsapp_home">Fale Conosco Pelo WhatsApp</string>
    <string name="button_login_after">Logar depois</string>
</resources>